--- a/excursions.html
+++ b/excursions.html
@@ -219,6 +219,16 @@ function showExcursionModal(exc) {
   document.getElementById("excursionModal").style.display = "flex";
 }
 </script>
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const toggleBtn = document.querySelector(".menu-toggle");
+    const navLinks = document.querySelector(".nav-links");
+
+    toggleBtn.addEventListener("click", () => {
+      navLinks.classList.toggle("active");
+    });
+  });
+</script>
 
 
 
