--- a/index.html
+++ b/index.html
@@ -564,25 +564,6 @@ function openTourDetails(title) {
 </script>
 
 
-<script>
-document.getElementById("searchForm").addEventListener("submit", function(e) {
-  e.preventDefault();
-
-  const type = document.getElementById("cruise-type").value;
-
-  if (!type) return;
-
-  if (type === "athens_land_tours") {
-    // ➤ Αν είναι Athens Land Tours → πήγαινε στη σελίδα tours.html
-    window.location.href = "tours.html";
-  } else {
-    // ➤ Για όλα τα υπόλοιπα πήγαινε στο results.html με query
-    window.location.href = `results.html?type=${type}`;
-  }
-});
-</script>
-
-
 
 
 <script>
@@ -731,14 +712,16 @@ document.addEventListener("DOMContentLoaded", () => {
 </script>
 
 <script>
-document.getElementById("searchForm").addEventListener("submit", e => {
+document.getElementById("searchForm").addEventListener("submit", function(e) {
   e.preventDefault();
-  const type = document.getElementById("cruise-type").value;
 
+  const type = document.getElementById("cruise-type").value;
   if (!type) return;
 
-  // Αν είναι Shore Excursions → πηγαίνει στη σελίδα excursions
-  if (type === "cruise_excursion") {
+  if (type === "athens_land_tours") {
+    window.location.href = "tours.html";
+  } 
+  else if (type === "cruise_excursion") {
     window.location.href = "excursions.html";
   } 
   else {
@@ -746,6 +729,7 @@ document.getElementById("searchForm").addEventListener("submit", e => {
   }
 });
 </script>
+
 
 <div id="google_translate_element"></div>
 
