--- a/package-details.html
+++ b/package-details.html
@@ -928,9 +928,8 @@ document.querySelectorAll(".tab").forEach(tab => {
   });
 </script>
 
-
 <script>
- function loadExcursions(shipName) {
+function loadExcursions(shipName, routeString) {
   const tabsContainer = document.getElementById("tabs");
   const tabContents = document.getElementById("tabContents");
   const modal = document.getElementById("excursionModal");
@@ -938,6 +937,9 @@ document.querySelectorAll(".tab").forEach(tab => {
   const modalImage = document.getElementById("modalImage");
   const modalText = document.getElementById("modalText");
   const closeBtn = modal.querySelector(".close-btn");
+
+  // Μετατροπή routeString σε array (π.χ. "Athens,Greece|Mykonos,Greece" -> ["Athens", "Mykonos"])
+  const routeArray = routeString.split("|").map(r => r.split(",")[0].trim());
 
   fetch("data/excursions.json")
     .then(res => res.json())
@@ -948,11 +950,20 @@ document.querySelectorAll(".tab").forEach(tab => {
         return;
       }
 
-      const islands = Object.keys(excursions);
+      // ✅ Φιλτράρουμε μόνο τα islands που υπάρχουν στο route
+      const availableIslands = Object.keys(excursions).filter(island =>
+        routeArray.includes(island)
+      );
+
+      if (availableIslands.length === 0) {
+        tabsContainer.innerHTML = `<p style="text-align:center;">No excursions match this cruise route.</p>`;
+        return;
+      }
+
       tabsContainer.innerHTML = "";
       tabContents.innerHTML = "";
 
-      islands.forEach((island, idx) => {
+      availableIslands.forEach((island, idx) => {
         const tabBtn = document.createElement("button");
         tabBtn.className = `tab ${idx === 0 ? "active" : ""}`;
         tabBtn.textContent = island;
@@ -970,14 +981,23 @@ document.querySelectorAll(".tab").forEach(tab => {
           const box = document.createElement("div");
           box.className = "excursion-box";
           box.innerHTML = `
-            <h4>${exc.title}</h4>
-            <p>${exc.desc}</p>
-            <div class="excursion-prices">
-              <span><strong>Adults:</strong> ${exc.priceAdults}</span>
-              <span><strong>Children:</strong> ${exc.priceChildren}</span>
+            <img src="${exc.image || 'images/default.jpg'}" alt="${exc.title}">
+            <div class="excursion-info">
+              <h4>${exc.title}</h4>
+              <p>${exc.desc.substring(0, 100)}...</p>
+              <div class="excursion-details">
+                <span><i class="fa-solid fa-ship"></i> ${shipName}</span>
+              </div>
+              <div class="excursion-footer">
+                <span class="price">${exc.priceAdults}</span>
+                <button class="view-btn">View Details</button>
+              </div>
             </div>
           `;
-          box.addEventListener("click", () => openExcursionModal(exc));
+          box.querySelector(".view-btn").addEventListener("click", e => {
+            e.stopPropagation();
+            openExcursionModal(exc);
+          });
           list.appendChild(box);
         });
 
@@ -985,7 +1005,7 @@ document.querySelectorAll(".tab").forEach(tab => {
         tabContents.appendChild(tabContent);
       });
 
-      // tab switching
+      // === Tab switching ===
       document.querySelectorAll(".tab").forEach(tab => {
         tab.addEventListener("click", () => {
           document.querySelectorAll(".tab").forEach(t => t.classList.remove("active"));
@@ -1000,11 +1020,17 @@ document.querySelectorAll(".tab").forEach(tab => {
       tabsContainer.innerHTML = `<p>Error loading excursions data.</p>`;
     });
 
-  // modal behavior
+  // === Modal ===
   function openExcursionModal(exc) {
     modalTitle.textContent = exc.title;
     modalImage.src = exc.image || "images/default.jpg";
-    modalText.textContent = exc.desc;
+    modalText.innerHTML = `
+      <p>${exc.desc}</p>
+      <div class="modal-prices">
+        <span><strong>Adults:</strong> ${exc.priceAdults}</span>
+        <span><strong>Children:</strong> ${exc.priceChildren}</span>
+      </div>
+    `;
     modal.style.display = "flex";
   }
 
@@ -1012,9 +1038,8 @@ document.querySelectorAll(".tab").forEach(tab => {
   window.addEventListener("click", e => {
     if (e.target === modal) modal.style.display = "none";
   });
- }
+}
 </script>
-
 
 
 
@@ -1093,7 +1118,7 @@ document.addEventListener("DOMContentLoaded", () => {
       // === Αποθήκευση πλοίου και φόρτωση δεδομένων ===
       if (pkg.ship) {
         loadShipDetails(pkg.ship);
-        loadExcursions(pkg.ship);
+       loadExcursions(pkg.ship, pkg.route);
       }
     })
     .catch(err => console.error("❌ Error loading package data:", err));
