--- a/cruise_details.html
+++ b/cruise_details.html
@@ -537,6 +537,24 @@ document.addEventListener("DOMContentLoaded", () => {
       } else {
         itineraryContainer.innerHTML = "<p>No itinerary available for this cruise.</p>";
       }
+      // ✅ Enable expandable text on mobile after itinerary is loaded
+if (window.innerWidth <= 768) {
+  document.querySelectorAll(".timeline-item").forEach(item => {
+    const text = item.querySelector(".text p");
+    if (!text) return;
+
+    const indicator = document.createElement("div");
+    indicator.className = "expand-indicator";
+    indicator.textContent = "Tap to read more ▼";
+    item.querySelector(".text").appendChild(indicator);
+
+    item.addEventListener("click", () => {
+      const expanded = item.classList.toggle("expanded");
+      indicator.textContent = expanded ? "Tap to collapse ▲" : "Tap to read more ▼";
+    });
+  });
+}
+
       
 
     
@@ -1300,6 +1318,8 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
+
 
 
 
